<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.adamoates.musicstructureapp.NowPlayingActivity">

    <TextView
        style="@style/DescriptionStyle"
        android:text="@string/nowPlayingDescription" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:paddingLeft="15dp"
            android:text="@string/artistName"
            android:textSize="24sp" />

        <TextView
            style="@style/nowPlaying"
            android:layout_marginTop="122dp"
            android:text="@string/albumDisplay"
            android:textAlignment="center"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/artist_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/artist_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="23dp"
            android:paddingLeft="15dp"
            android:text="@string/artistSong"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingBottom="24dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_rewind"
                style="@style/buttons"
                android:text="@string/rewindButton" />

            <Button
                android:id="@+id/button_play"
                style="@style/buttons"
                android:text="@string/playButton" />

            <Button
                android:id="@+id/button_fast"
                style="@style/buttons"
                android:text="@string/fastForwardButton" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>