<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.adamoates.musicstructureapp.MainActivity" >


    <TextView
        android:id="@+id/now_playing_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/CategoryStyle"
        android:background="@color/colorPrimary"
        android:text="@string/nowPlaying" />

    <TextView
        android:id="@+id/artist_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CategoryStyle"
        android:background="@color/colorPrimary"
        android:text="@string/artist" />

    <TextView
        android:id="@+id/albums_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CategoryStyle"
        android:background="@color/colorPrimary"
        android:text="@string/albums" />

    <TextView
        android:id="@+id/playlist_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CategoryStyle"
        android:background="@color/colorPrimary"
        android:text="@string/playlist" />

    <TextView
        android:id="@+id/store_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CategoryStyle"
        android:background="@color/colorPrimary"
        android:text="@string/store" />

</LinearLayout>
